# psr

./: CMakeLists.txt  README.md
include/controller/: game.hpp
include/controller/actions/: add_points.hpp  make_selection.hpp  next_player.hpp  next_round.hpp  reset_model.hpp  reset_player.hpp  set_rounds.hpp  show_points.hpp  show_results.hpp  show_winner.hpp  update_model.hpp
include/controller/events/: play.hpp  select.hpp  shoot.hpp
include/controller/guards/: already_won.hpp  has_inc_ids.hpp  has_winner.hpp  is_current.hpp  is_last.hpp  out_of_rounds.hpp
include/controller/players/: computer.hpp  human.hpp  player.hpp
include/controller/states/: rounds.hpp
include/model/: imodel.hpp  model.hpp
include/view/: iview.hpp  view.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/feature/controller/: game.cpp
test/unit/controller/guards/: has_inc_ids.cpp
test/unit/model/: model.cpp
test/unit/players/: human.cpp
test/unit/states/: rounds.cpp
